# zabean

./: .gitignore  GROUND_TRUTH.md  LICENSE  README.md  pyproject.toml
.claude/: launch.json
tests/: test_models.py  test_parsers.py
zabean/: __init__.py  install.py  uninstall.py
zabean/agent/: __init__.py  __main__.py  collector.py  hook.py  installer.py
zabean/ground_truth/: __init__.py  collector.py  github_client.py  local_client.py  models.py  parsers.py
zabean/utils/: __init__.py  logging.py  validation.py
zabean/visualization/: serve.py  ui.html
